tests/vertical-slice/reject/gen_capture_whole_value_if_else.hew
fn main() {
    let items: Vec<i64> = Vec::new();
    let c = true;
    let _g = gen {
        if c { items } else { items }
    };
}
